tests/ui/interp_empty.stderr
Error [E0003]: there's nothing inside this `{ }` to show
  --> tests/ui/interp_empty.jet:2:12
    |
  2 |     print("{}");
    |            ^^
 Why: interpolation puts a value into the text, so the braces need a value
 Fix: put a value inside, like `{name}`, or write `{{}}` for literal braces
